Fix: Device and dtype

--- a/example_notebooks/end_to_end_model_preparation_and_inference.ipynb
+++ b/example_notebooks/end_to_end_model_preparation_and_inference.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
+    "## Setup\n"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports"
+    "## Imports\n"
    ]
   },
   {
@@ -82,13 +82,13 @@
    "source": [
     "## Prepare Checkpoints for On-Demand Loading\n",
     "\n",
-    "🥳 Get ready for limitless inference \n",
+    "🥳 Get ready for limitless inference\n",
     "\n",
-    "In this step, we'll load an existing model checkpoint and shard it, so that its weights can be loaded on-demand, instead of all at once. \n",
+    "In this step, we'll load an existing model checkpoint and shard it, so that its weights can be loaded on-demand, instead of all at once.\n",
     "\n",
     "💡 Keep in mind, the sharding step has to be done on a device that can handle the full model size, as the full model state will be loaded. But, once the weights are sharded and saved, future inference tasks can run on any device that has at least the memory equal to the size of the largest shard.\n",
     "\n",
-    "For simplicity, we'll use HuggingFace's implementation, but note that the size of the shard determines the minimum device memory that can be supported. An alternative is to shard the model in a layer-wise fashion, allowing for more dynamic control over which layers are pre-loaded together. \n"
+    "For simplicity, we'll use HuggingFace's implementation, but note that the size of the shard determines the minimum device memory that can be supported. An alternative is to shard the model in a layer-wise fashion, allowing for more dynamic control over which layers are pre-loaded together.\n"
    ]
   },
   {
@@ -99,9 +99,13 @@
    "source": [
     "HF_REPO_ID = \"google/flan-t5-small\"\n",
     "CKPT_DIR = \"sharded-flan-t5-small\"\n",
+    "DEVICE = torch.device(\"cuda\")\n",
+    "DTYPE = torch.float16\n",
     "\n",
     "# Load model checkpoints with the desired data type\n",
-    "model = AutoModelForSeq2SeqLM.from_pretrained(HF_REPO_ID, torch_dtype=torch.float16)\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(\n",
+    "    HF_REPO_ID, device_map=\"auto\", torch_dtype=DTYPE\n",
+    ")\n",
     "\n",
     "# Shard the model checkpoints, the size of the shard determines the mimimum GPU memory supported\n",
     "# in this case since the model is tiny we set a very small shard of 100MB but in a more realistic\n",
@@ -126,18 +130,18 @@
     "\n",
     "1. `model_fn`: A function that returns an instance of our model. This function does not need to load weights, as the weights are initialized as empty. This means that our model will not consume any device memory, allowing us to initialize a model with billions of parameters even on an everyday laptop.\n",
     "\n",
-    "    ```python\n",
-    "    def model_fn() -> torch.nn.Module:\n",
-    "        ...\n",
-    "    ```\n",
+    "   ```python\n",
+    "   def model_fn() -> torch.nn.Module:\n",
+    "       ...\n",
+    "   ```\n",
     "\n",
     "2. `weights_loader_fn`: A function that takes the module name and a list of weight names as inputs, and returns a mapping from weight name to weight.\n",
     "\n",
-    "    ```python\n",
-    "    def weights_loader_fn(module_name: str, weight_names: list[str]\n",
-    "    ) -> dict[str, torch.Tensor]:\n",
-    "        ...\n",
-    "    ```"
+    "   ```python\n",
+    "   def weights_loader_fn(module_name: str, weight_names: list[str]\n",
+    "   ) -> dict[str, torch.Tensor]:\n",
+    "       ...\n",
+    "   ```\n"
    ]
   },
   {
@@ -159,8 +163,8 @@
     "    index_file_path=os.path.join(CKPT_DIR, \"pytorch_model.bin.index.json\"),\n",
     "    weights_dir=CKPT_DIR,\n",
     "    weights_mapping_key=\"weight_map\",\n",
-    "    device=torch.device(\"cuda\"),\n",
-    "    dtype=torch.float16,\n",
+    "    device=DEVICE,\n",
+    "    dtype=DTYPE,\n",
     ")\n",
     "\n",
     "# Initialize our odewel model. `enable_preloading` determines whether any extra weights returned\n",
@@ -178,6 +182,7 @@
    "source": [
     "def generate(tokenizer, model, prompt):\n",
     "    input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids\n",
+    "    input_ids = input_ids.to(DEVICE)\n",
     "    outputs = model.generate(input_ids, max_new_tokens=20)\n",
     "\n",
     "    return tokenizer.batch_decode(outputs, skip_special_tokens=True)"
