Fix: Disable GPU inference

--- a/example_notebooks/large_language_model_inference.ipynb
+++ b/example_notebooks/large_language_model_inference.ipynb
@@ -118,7 +118,9 @@
     "   def weights_loader_fn(module_name: str, weight_names: list[str]\n",
     "   ) -> dict[str, torch.Tensor]:\n",
     "       ...\n",
-    "   ```\n"
+    "   ```\n",
+    "\n",
+    "> ⚠️ Sadly the due the many shards in this checkpoint, GPU inference is very slow, due to the slow nature of transferring tensors to GPU, and has been disabled. You can enable it by setting the device to `\"cuda\"` and changing the data-type to `float16`. The CPU inference takes a while to run. So grab a coffee and enjoy watching a model that should take **20GB+** of memory run using just **4GB** ☕."
    ]
   },
   {
@@ -129,8 +131,8 @@
    "source": [
     "HF_REPO_ID = \"philschmid/flan-t5-xxl-sharded-fp16\"\n",
     "CKPT_DIR = \"flan-t5-xxl-sharded-fp16\"\n",
-    "DEVICE = torch.device(\"cuda\")\n",
-    "DTYPE = torch.float16\n",
+    "DEVICE = torch.device(\"cpu\")\n",
+    "DTYPE = torch.bfloat16\n",
     "\n",
     "# Prepare the `model_fn`. This is just a function that returns an instance of our model.\n",
     "# It is used to create an instance of our model that is initialized with empty weights and\n",
